--- a/sass/style.scss
+++ b/sass/style.scss
@@ -200,6 +200,25 @@ body {
   width: 36px;
   height: 21px;
   position: relative;
+  z-index: 51;
+
+  &.is-checked {
+    .drawer-icon__bar {
+      &:nth-of-type(1) {
+        top: 10px;
+        transform: rotate(30deg);
+      }
+
+      &:nth-of-type(2) {
+        display: none;
+      }
+
+      &:nth-of-type(3) {
+        top: 10px;
+        transform: rotate(-30deg);
+      }
+    }
+  }
 }
 
 .drawer-icon__bar {
@@ -210,6 +229,7 @@ body {
   height: 3px;
   border-radius: 6px;
   background: #111;
+  transition: transform 0.3s linear, top 0.3s linear;
 
   &:nth-of-type(1) {}
 
@@ -222,6 +242,38 @@ body {
   }
 }
 
+.drawer-content {
+  width: 320px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  background: #F7BA1A;
+  z-index: 50;
+  padding: 86px 40px 40px;
+  transform: translateX(100%);
+  transition: transform 0.3s linear;
+
+  &.is-checked {
+    transform: translateX(0);
+  }
+}
+
+.drawer-content__menu {}
+
+.drawer-content__link {
+  display: block;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  text-align: right;
+  font-weight: 700;
+  letter-spacing: 0.48px;
+}
+
+.drawer-content__button {
+  margin-top: 14px;
+  text-align: right;
+}
 
 .mv {
   border-radius: 20px;
