--- a/css/style.css
+++ b/css/style.css
@@ -1840,4 +1840,32 @@ body {
 .about-modal__close-button {
   margin-top: 30px;
   text-align: center;
+}
+
+.fade-in-up {
+  opacity: 0;
+  transform: translateY(24px);
+  transition: opacity 1s, transform 1s;
+}
+.fade-in-up.is-in-view {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.fade-in-down {
+  opacity: 0;
+  transform: translateY(-24px);
+  transition: opacity 1s, transform 1s;
+}
+.fade-in-down.is-in-view {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.fade-in {
+  opacity: 0;
+  transition: opacity 1s;
+}
+.fade-in.is-in-view {
+  opacity: 1;
 }/*# sourceMappingURL=style.css.map */
